# shadow-protocol

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  session.rs
src-tauri/src/commands/: agent_state.rs  apps.rs  autonomous.rs  chat.rs  market.rs  mod.rs  ollama_manager.rs  portfolio.rs  session.rs  settings.rs  strategy.rs  transfer.rs  wallet.rs  wallet_sync.rs
src-tauri/src/services/: agent_chat.rs  agent_orchestrator.rs  agent_state.rs  ai_evaluation.rs  ai_kernel.rs  ai_memory.rs  ai_profiles.rs  alpha_service.rs  anonymizer.rs  audit.rs  behavior_learner.rs  chain.rs  decision_validator.rs  execution_preferences.rs  flow_domain.rs  guardrails.rs  harvester.rs  health_monitor.rs  heartbeat.rs  local_db.rs  market_actions.rs  market_ranker.rs  market_service.rs  mod.rs  ollama_client.rs  opportunity_scanner.rs  portfolio_advice.rs  portfolio_insights.rs  portfolio_service.rs  settings.rs  shadow_watcher.rs  sonar_client.rs  strategy_compiler.rs  strategy_engine.rs  strategy_legacy.rs  strategy_scheduler.rs  strategy_types.rs  strategy_validator.rs  task_manager.rs  tool_registry.rs  (+3 more)
src-tauri/src/services/apps/: filecoin.rs  flow.rs  flow_actions.rs  flow_bridge.rs  flow_scheduler.rs  integration_prompt.rs  lit.rs  mod.rs  payload.rs  permissions.rs  registry.rs  runtime.rs  scheduler.rs  (+1 more)
(+351 files in other folders)
